# ukrainian-colors

./: .gitignore  README.md  app.py  conda.yaml  pyproject.toml  ukraine.py
